// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders as not toggled 1`] = `
<label
  className="ax-toggle ax-space--tiny"
>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={false}
      className="ax-toggle__input"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;

exports[`Toggle renders as toggled 1`] = `
<label
  className="ax-toggle ax-space--tiny"
>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={true}
      className="ax-toggle__input"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;

exports[`Toggle renders with label children 1`] = `
<label
  className="ax-toggle ax-space--tiny"
>
  <span
    className="ax-toggle__label"
  >
    Toggle
  </span>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={false}
      className="ax-toggle__input"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;
